fixed text wrap for cart titles

--- a/cart.scss
+++ b/cart.scss
@@ -45,6 +45,7 @@ body {
             font-size: 24px;
             color: #222;
             margin-bottom: 42px;
+            text-wrap: pretty;
         }
         &-options {
             font-size: 22px;
